<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="za.ac.cput.yusiry.barapp.AddStaffActivity"
    android:background="#e3f2fd">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/please_enter_name"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="#0d47a1"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtStaffName"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:textColor="#448aff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/please_enter_surname"
        android:id="@+id/textView5"
        android:layout_below="@+id/txtStaffName"
        android:layout_alignParentStart="true"
        android:textColor="#0d47a1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtStaffSurname"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:textColor="#448aff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/please_enter_phone_number"
        android:id="@+id/textView6"
        android:layout_below="@+id/txtStaffSurname"
        android:layout_alignParentStart="true"
        android:textColor="#0d47a1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/txtPhone"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:textColor="#448aff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/please_enter_id_number"
        android:id="@+id/textView7"
        android:layout_below="@+id/txtPhone"
        android:layout_alignParentStart="true"
        android:textColor="#0d47a1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtIDnumber"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:maxLength="13"
        android:textColor="#448aff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/please_enter_address"
        android:id="@+id/textView8"
        android:layout_below="@+id/txtIDnumber"
        android:layout_alignParentStart="true"
        android:textColor="#0d47a1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/txtStaffAddress"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:textColor="#448aff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnStaffSave"
        android:layout_below="@+id/txtStaffAddress"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:background="#90caf9"
        android:layout_marginLeft="61dp" />

</RelativeLayout>
