<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e3f2fd"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/welcome"
            android:id="@+id/textView"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="30dp"
            android:textColor="#0d47a1"
            android:textSize="28sp"
            android:typeface="normal"
            android:capitalize="none"
            android:textAlignment="center" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_staff_member"
            android:id="@+id/btnAddStaff"
            android:layout_marginTop="30dp"
            android:theme="@android:style/Holo.ButtonBar"
            android:background="#90caf9"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_staff_members"
            android:id="@+id/btnViewStaff"
            android:theme="@style/AppTheme"
            android:background="#90caf9"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </LinearLayout>
</RelativeLayout>